--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="pricing.html">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="https://luxurydesigns.shop/pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ</a></li>
           <li><a class="nav-link scrollto" href="#testimonials">Testimonials</a></li>
           <li><a class="getstarted scrollto" href="https://luxurydesigns.shop/Support">Contact Support</a></li>
@@ -103,7 +103,7 @@
                 We are a design and marketing agency who brings imagination to your brand. We are passionate about creating a new logo that is truly unique, professional, and meaningful to you and your company. There's nothing we love more than helping businesses make the right impression with their branding. Our process involves not only coming up with ideas but also designing the logo in different variations, color schemes and fonts, allowing you to pick what best fits you or your business silhouette.
               </p>
               <div class="text-center text-lg-start">
-                <a href="pricing.html" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="https://luxurydesigns.shop/pricing" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Our prices</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -454,7 +454,7 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#hero">Home</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="pricing.html">Pricing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="https://luxurydesigns.shop/pricing">Pricing</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#faq">FAQ</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#testimonials">Testimonials</a></li>
             </ul>
