--- a/pricing.html
+++ b/pricing.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 
-  <title>Luxury designs</title>
+  <title>Luxurydesigns pricing</title>
   <meta property="og:url" content="https://www.luxurydesigns.shop">
   <meta property="og:title" content="Luxury designs">
   <meta property="og:image" content="https://avatars.githubusercontent.com/u/126357636?v=4">
