--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
             <div class="social-links mt-3">
               <a href="https://www.facebook.com/Luxurydesigns708/" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://twitter.com/LuxuryDesigns4" class="twitter"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.instagram.com/luxurydesignsteam/" class="instagram"><i class="bi bi-instagram"></i></a>
 
               
               
